# IntelligentUAVChampionshipSimulator

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  launcher_WIN.py  run_docker_simulator.sh  run_simulator.sh  run_simulator_offscreen.sh  settings.json  start.bash
Ground_true/: gt.txt
config/: config.json
docs/: simulator_instruction.md
include/: crc.h  gnss_simulator.h  simulator.h
roswrapper/: simulator.sh
roswrapper/ros/.catkin_tools/profiles/default/: devel_collisions.txt
roswrapper/ros/src/airsim_ros_pkgs/: CMakeLists.txt
roswrapper/ros/src/airsim_ros_pkgs/include/: airsim_ros_wrapper.h
roswrapper/ros/src/airsim_ros_pkgs/launch/: airsim_node.launch
roswrapper/ros/src/airsim_ros_pkgs/msg/: AngleRateThrottle.msg  PoseCmd.msg
roswrapper/ros/src/airsim_ros_pkgs/src/: airsim_node.cpp  airsim_ros_wrapper.cpp
source/: CMakeLists.txt  crc.cpp  gnss_simulator.cpp  main.cpp  simulator.cpp
stage1_RGBD/: Manifest_NonUFSFiles_Linux.txt  contest2.sh  simulator.sh
stage1_RGBD/contest2/Saved/Crashes/crashinfo-contest2-pid-3640553-C67E412D5FA1436F9E959E150EDB152E/: CrashContext.runtime-xml  Diagnostics.txt
stage1_RGBD/contest2/Saved/Crashes/crashinfo-contest2-pid-3640780-B416B80054FC43DA9FDD1B4787F18D28/: CrashContext.runtime-xml
stage1_RGBD/roswrapper/ros/src/airsim_ros_pkgs/include/: airsim_ros_wrapper.h
stage1_RGBD/roswrapper/ros/src/airsim_ros_pkgs/src/: airsim_node.cpp
stage1_stereo/contest2/Saved/Config/LinuxNoEditor/: Engine.ini  GameUserSettings.ini
stage1_stereo/contest2/Saved/Crashes/crashinfo-contest2-pid-3640340-39C6378DADC149F2810FF8450B50B999/: CrashContext.runtime-xml
stage1_stereo/roswrapper/ros/src/airsim_ros_pkgs/include/: airsim_ros_wrapper.h
stage1_stereo/roswrapper/ros/src/airsim_ros_pkgs/src/: airsim_ros_wrapper.cpp
stage2_RGBD/: Manifest_NonUFSFiles_Linux.txt  settings.json  simulator.sh
stage2_RGBD/complex/Content/: ComplexSceneResult.txt
stage2_RGBD/roswrapper/ros/src/airsim_ros_pkgs/launch/: airsim_node.launch
stage2_RGBD/roswrapper/ros/src/airsim_ros_pkgs/src/: airsim_ros_wrapper.cpp
stage2_stereo/: complex.sh  settings.json
stage2_stereo/roswrapper/ros/src/airsim_ros_pkgs/: CMakeLists.txt
stage2_stereo/roswrapper/ros/src/airsim_ros_pkgs/include/: airsim_ros_wrapper.h
stage2_stereo/roswrapper/ros/src/airsim_ros_pkgs/src/: airsim_node.cpp  airsim_ros_wrapper.cpp
stage3/: FPV1.sh  Manifest_NonUFSFiles_Linux.txt  settings.json  simulator.sh
stage3/FPV1/Saved/Config/LinuxNoEditor/: Engine.ini  GameUserSettings.ini
